upload the whole repository

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,8 @@ on:
   workflow_dispatch:
 
 permissions:
-  id-token: write
-  pages: write
+  id-token: write # This is needed for deploying to GitHub Pages
+  pages: write      # This is needed for deploying to GitHub Pages
 
 jobs:
   build-and-deploy:
@@ -27,11 +27,16 @@ jobs:
       - name: Run analyze.py
         run: python analyze.py
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: .  
+
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
           artifact_name: github-pages
-          path: .
       - name: Setup Pages
         uses: actions/configure-pages@v4
         with:
