current directory publishing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,8 @@ on:
   workflow_dispatch:
 
 permissions:
-  id-token: write # This is needed for deploying to GitHub Pages
-  pages: write      # This is needed for deploying to GitHub Pages
+  id-token: write
+  pages: write
 
 jobs:
   build-and-deploy:
@@ -31,12 +31,13 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: .  
+          path: ./
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
           artifact_name: github-pages
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
         with:
